More informative prediction outputs in notebook

--- a/RBPdetect_make_predictions.ipynb
+++ b/RBPdetect_make_predictions.ipynb
@@ -137,15 +137,7 @@
    "source": [
     "# do domain-based detections\n",
     "domain_based_detections = rbpu.RBPdetect_domains_protein(hmmer_path, pfam_file, fasta_file, N_blocks=N_blocks, \n",
-    "                                                         C_blocks=C_blocks, detect_others=False)\n",
-    "\n",
-    "names = [record.id for record in SeqIO.parse(fasta_file, 'fasta')]\n",
-    "domain_preds = []\n",
-    "for pid in names:\n",
-    "    if pid in list(domain_based_detections['identifier']):\n",
-    "        domain_preds.append(1)\n",
-    "    else:\n",
-    "        domain_preds.append(0)"
+    "                                                         C_blocks=C_blocks, detect_others=False)"
    ]
   },
   {
@@ -155,9 +147,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save the domain-based predictions\n",
-    "domain_results = pd.DataFrame(domain_preds, columns=['preds'])\n",
-    "domain_results.to_csv('domains_test_predictions.csv', index=False)"
+    "# save the domain-based detections\n",
+    "domain_based_detections.to_csv('domains_based_detections.csv', index=False)"
    ]
   },
   {
@@ -206,7 +197,7 @@
     "# save the embeddings-based predictions and scores\n",
     "xgb_results = pd.concat([pd.DataFrame(preds_xgb, columns=['preds']), \n",
     "                        pd.DataFrame(score_xgb, columns=['score'])], axis=1)\n",
-    "xgb_results.to_csv(results_dir+'/xgboost_test_predictions.csv', index=False)"
+    "xgb_results.to_csv('xgb_based_detections.csv', index=False)"
    ]
   },
   {
@@ -217,8 +208,16 @@
    "outputs": [],
    "source": [
     "# save predictions of both methods together (optional)\n",
+    "names = [record.id for record in SeqIO.parse(fasta_file, 'fasta')]\n",
+    "domain_preds = []\n",
+    "for pid in names:\n",
+    "    if pid in list(domain_based_detections['identifier']):\n",
+    "        domain_preds.append(1)\n",
+    "    else:\n",
+    "        domain_preds.append(0)\n",
+    "\n",
     "results = pd.DataFrame({'domain_based_predictions':domain_preds, 'machine_learning_predictions':preds_xgb})\n",
-    "results.to_csv('results_predictions.csv', index=False)"
+    "results.to_csv('detection_results.csv', index=False)"
    ]
   },
   {
@@ -323,11 +322,26 @@
     "score_xgb = xgb_saved.predict_proba(features)[:,1]\n",
     "preds_xgb = (score_xgb > 0.5)*1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb354f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save predictions\n",
+    "names = [record.id for record in SeqIO.parse(fasta_file, 'fasta')]\n",
+    "sequences = [str(record.seq) for record in SeqIO.parse(fasta_file, 'fasta')]\n",
+    "preds_xgb = ['RBP' if x == 1 else 'nonRBP' for x in preds_xgb]\n",
+    "xgb_based_detections = pd.DataFrame({'name': names, 'ProteinSeq': sequences, 'scores': score_xgb, 'prediction': preds_xgb})\n",
+    "xgb_based_detections.to_csv('xgb_combined_detections.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('ML1')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
