--- a/RBPdetect_make_predictions.ipynb
+++ b/RBPdetect_make_predictions.ipynb
@@ -20,13 +20,24 @@
     "### Instructions\n",
     "\n",
     "1. Prepare a FASTA file with the **protein** sequences you want to make predictions for.\n",
-    "2. Download HMMER (http://hmmer.org) and locate its contents (you need the path to it, see below).\n",
-    "3. Make sure all the necessary software packages (*Libraries* below) are installed.\n",
-    "4. Compute the necessary protein language embeddings using the 'RBPdetect_protein_embeddings' notebook in the repository. This is best done on Kaggle or Google Colab for better performance utilizing GPU computing power. Then save the computed embeddings from Kaggle or Google Colab locally on your computer.\n",
+    "\n",
+    "2. Download HMMER (http://hmmer.org), unzip its contents on your computer and locate this folder (e.g. '/Users/Sally/hmmer-3.3.1'). You can put this folder anywhere you want on your computer, as long as you know where it is.\n",
+    "\n",
+    "3. Install all the necessary Python packages (*Libraries* below, click the hyperlinks for more info): [Biopython](https://biopython.org/wiki/Download), [tqdm](https://github.com/tqdm/tqdm#latest-pypi-stable-release), [xgboost](https://xgboost.readthedocs.io/en/stable/install.html), [NumPy](https://numpy.org/install/), [Pandas](https://pandas.pydata.org/docs/getting_started/install.html) and [Matplotlib](https://matplotlib.org/stable/users/installing/index.html). Typically you can install these packages via conda or pip, as mentioned in the installation guides that are hyperlinked. Often, NumPy, Pandas and Matplotlib come preinstalled.\n",
+    "\n",
+    "4. Go to [Google Colab](http://colab.research.google.com/) or [Kaggle](https://www.kaggle.com) to compute the necessary protein language embeddings, see details in the enumeration below. After computing, save the computed embeddings from Kaggle or Google Colab locally on your computer.\n",
+    "    - In Colab, go to File > Upload notebook and then choose the 'RBPdetect_protein_embeddings' notebook in this repository after having it saved on your computer. Then Connect to a runtime (upper right of the screen) and finally go to Runtime > Change runtime type > make sure a GPU is enabled.\n",
+    "    - On the Kaggle platform, first sign in or make an account. Then click the 'Create' button on the left and start a new notebook. On the next screen, do File > Import notebook and upload the 'RBPdetect_protein_embeddings' notebook from this repository.\n",
+    "\n",
     "5. Copy the FASTA file and computed embeddings to the data folder of this repository. In the data folder, the RBPdetect_XGBmodel.json and/or RBPdetect_phageRBPs.hmm and/or RBPdetect_XGBhmm.json should also be located.\n",
+    "\n",
     "6. Fill in the necessary file names in the second code block below.\n",
-    "7. Run all the code blocks sequentially to make predictions based on the domain-based approach and/or machine-learning-based approach and/or combined approach (see different headers below).\n",
-    "8. The resulting dataframe with predictions contains a row for each of the protein sequences that was submitted. A binary prediction (0/1) is made for each of the methods. A '0' indicates that the sequence is predicted not to be an RBP, while a '1' indicates that the sequence is predicted as an RBP."
+    "\n",
+    "7. (Optional) To verify if HMMER software is properly installed and functioning, you can run predictions with the *Domain-based approach* (first few code blocks below) with the *sequences.fasta* example file. This file contains 3 protein sequences that are should all be predicted as RBPs (i.e., true positives). If this is not the case, then HMMER is not functioning properly (for troubleshooting: try looking at the outputs of the Pfam database press step before making predictions -> do you see errors or anything unexpected?).\n",
+    "\n",
+    "8. Run all the code blocks sequentially to make predictions based on the domain-based approach and/or machine-learning-based approach and/or combined approach (see different headers below). You can run code blocks either by clicking on them and pressing the play button 'Execute' on the top of the screen, or pressing shift+enter.\n",
+    "\n",
+    "9. The resulting dataframe with predictions contains a row for each of the protein sequences that was submitted. A binary prediction (0/1) is made for each of the methods. A '0' indicates that the sequence is predicted not to be an RBP, while a '1' indicates that the sequence is predicted as an RBP."
    ]
   },
   {
