Update title notebook

--- a/RBPdetect_notebook.ipynb
+++ b/RBPdetect_notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "surprising-floating",
    "metadata": {},
    "source": [
-    "# Dual identification of novel phage receptor-binding proteins based on protein domains and machine learning\n",
+    "# Identification of phage receptor-binding protein sequences with hidden Markov models and an extreme gradient boosting classifier\n",
     "\n",
     "This notebook serves as the main document of code and analyses for the detection of phage RBPs in published NCBI genomes.\n",
     "\n",
