--- a/PhageRBPdetect_v2/PhageRBPdetect_v2_make_predictions.ipynb
+++ b/PhageRBPdetect_v2/PhageRBPdetect_v2_make_predictions.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "8efac261",
    "metadata": {},
    "outputs": [],
@@ -66,17 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "637d4a12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pfam_file = 'data/RBPdetect_phageRBPs.hmm'\n",
-    "xgb_model_embeddings = 'data/RBPdetect_xgb_model.json'\n",
-    "xgb_model_combined = 'data/RBPdetect_xgb_hmm.json'\n",
-    "fasta_file = 'data/sequences.fasta'\n",
-    "hmmer_path = ... # e.g. '/Users/Sally/hmmer-3.3.1'\n",
-    "embeddings_file = ... # e.g. 'data/embeddings.csv'"
+    "pfam_file = '/Users/dimi/Documents/GitHub/PhageRBPdetection/data/RBPdetect_phageRBPs.hmm'\n",
+    "xgb_model_embeddings = '/Users/dimi/Documents/GitHub/PhageRBPdetection/data/RBPdetect_xgb_model.json'\n",
+    "xgb_model_combined = '/Users/dimi/Documents/GitHub/PhageRBPdetection/data/RBPdetect_xgb_hmm.json'\n",
+    "fasta_file = '/Users/dimi/Documents/GitHub/PhageRBPdetection/data/sequences.fasta'\n",
+    "hmmer_path = '/Users/Dimi/hmmer-3.3.1' # e.g. '/Users/Sally/hmmer-3.3.1'\n",
+    "embeddings_file = '/Users/dimi/Documents/GitHub/PhageRBPdetection/data/test_embeddings.csv' # e.g. 'data/embeddings.csv'"
    ]
   },
   {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3ee5c405",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "dc27d334",
    "metadata": {},
    "outputs": [],
@@ -126,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "8182c497",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ceae57e82764d0c991eb5671595d09a",
+       "model_id": "32a8cb9a69a642aa93d9459db626f55e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,13 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f2edae3c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the domain-based detections\n",
-    "domain_based_detections.to_csv('domains_based_detections.csv', index=False)"
+    "domain_based_detections.to_csv('/Users/dimi/Documents/GitHub/PhageRBPdetection/data/domains_based_detections.csv', index=False)"
    ]
   },
   {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9b0fa40b",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "de854b2b",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "13eb81b5",
    "metadata": {},
    "outputs": [],
@@ -280,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "0d8ae0c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f06a6f4fb8bb4048b8420b1e98dc0744",
+       "model_id": "8161e2a4a6ff45cd9d6668a3370c1344",
        "version_major": 2,
        "version_minor": 0
       },
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "a94ff277",
    "metadata": {},
    "outputs": [],
